# numerical_cpp

./: CMakeLists.txt  README.md  array_class_jacobis_method_Axb.cpp  poisson.cpp
jacobi/: array_class_jacobis_method_Axb.cpp
plotWithPython/: cosh.txt  data.txt  plot2D.py  plotWithPython.cpp  pyplot.h  sinh.txt
poisson/: CMakeLists.txt  poisson.cpp
singleton/: singleton_example_tutorials_pt.cpp
threads/: pThreads_linux.cpp  pthreads.c  singleton_example_tutorials_pt.cpp  threads.cpp
